mise à jour de la page index.html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <section class="hero is-small">
             <div class="hero-body">
                 <div class="container has-text-centered">
-                    <h1 class="title has-text-white">Miniprojet PPE1</h1>
-                        <p class="subtitle has-text-white-ter">Analyse automatique de pages web</p>
+                    <h1 class="title has-text-white">Projet PPE1</h1>
+                        <p class="subtitle has-text-white-ter">La vie des mots sur le Web</p>
                 </div>
             </div>
         </section>
@@ -43,14 +43,16 @@
                         <div class="card">
                             <div class="card-content">
                                 <div class="content">
-                                    <p>Le but de ce miniprojet est de récupérer une liste d'URLs, de télécharger les pages correspondantes, puis d'extraire les informations suivantes :</p>
+                                    <p>Le but de ce projet est :</p>
                                     <ul>
-                                        <li>le code HTTP,</li>
-                                        <li>l'encodage,</li>
-                                        <li>le nombre de mots contenus dans la page.</li>
+                                        <li>étudier l’usage un mot et ses “variations” en plusieurs langues sur le Web,</li>
+                                        <li>l'constituer un corpus multilingue,</li>
+                                        <li>constitution à l’aide d’outils Unix .</li>
                                     </ul>
-                                    <p>Toutes ces informations sont rassemblées dans un tableau généré automatiquement.</p>
-                                    <p class="has-text-centered mt-5"><a href="miniprojet/tableaux/tableau-fr.html" class="button is-primary is-medium">Consulter le tableau ici</a></p>
+                                    <p>Toutes ces informations sont rassemblées dans les tableaux suivants :</p>
+                                    <p class="has-text-centered mt-5"><a href="tableaux/tableau-be1.html" class="button is-primary is-medium">Bélarussien sens 1</a></p>
+                                    <p class="has-text-centered mt-5"><a href="tableaux/tableau-kr.html" class="button is-primary is-medium">Coréen</a></p>
+
                                 </div>
                             </div>
                         </div>
@@ -61,7 +63,7 @@
 
         <footer class="footer" style="padding: 1.5rem; background-color: #f9f9f9">
             <div class="content has-text-centered">
-                <p class="is-size-7 has-text-gray">Miniprojet PPE1 - M1 TAL</p>
+                <p class="is-size-7 has-text-gray">Projet PPE1 - M1 TAL</p>
             </div>
         </footer>
     </body>
