mise à jour et traitement du fichier be.sens2_autanomnast.txt, ajout du tableau tableau-be2.html

--- a/tableaux/tableau-be1.html
+++ b/tableaux/tableau-be1.html
@@ -97,7 +97,7 @@
 			<td class="url-cell">https://www.svaboda.org/a/789684.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    5414</td>
+			<td>    5412</td>
 		</tr>
 <tr>
 			<td>6</td>
@@ -137,9 +137,9 @@
 <tr>
 			<td>11</td>
 			<td class="url-cell">https://dumka.me/universitety</td>
-			<td><span class="tag is-danger is-light">403</span></td>
-			<td>-</td>
-			<td>      18</td>
+			<td><span class="tag is-success is-light">200</span></td>
+			<td>UTF-8</td>
+			<td>    8356</td>
 		</tr>
 <tr>
 			<td>12</td>
@@ -153,7 +153,7 @@
 			<td class="url-cell">https://www.emagia.com/be/resources/glossary/what-is-autonomous-in-banking/</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    5003</td>
+			<td>    5011</td>
 		</tr>
 <tr>
 			<td>14</td>
@@ -167,70 +167,70 @@
 			<td class="url-cell">https://novychas.online/zamezza/polskaja-katalonija</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    7084</td>
+			<td>    7069</td>
 		</tr>
 <tr>
 			<td>16</td>
 			<td class="url-cell">https://novychas.online/zamezza/u_marshy_autanomii_siliezii_pr</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6209</td>
+			<td>    6194</td>
 		</tr>
 <tr>
 			<td>17</td>
 			<td class="url-cell">https://novychas.online/zamezza/pakazam_maskvie_sibir</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6523</td>
+			<td>    6507</td>
 		</tr>
 <tr>
 			<td>18</td>
 			<td class="url-cell">https://novychas.online/zamezza/vajna_za_sciah</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6966</td>
+			<td>    6951</td>
 		</tr>
 <tr>
 			<td>19</td>
 			<td class="url-cell">https://novychas.online/zamezza/pazl_pad_nazvaj</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6754</td>
+			<td>    6736</td>
 		</tr>
 <tr>
 			<td>20</td>
 			<td class="url-cell">https://novychas.online/zamezza/kjurasao_a_tanom_ja_ne_pradaec</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6104</td>
+			<td>    6089</td>
 		</tr>
 <tr>
 			<td>21</td>
 			<td class="url-cell">https://novychas.online/zamezza/shirokaja_a_tanom_ja_dzjakuj_n</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6501</td>
+			<td>    6481</td>
 		</tr>
 <tr>
 			<td>22</td>
 			<td class="url-cell">https://www.sb.by/articles/u-dobry-shlyakh-supolka.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>UTF-8</td>
-			<td>    5540</td>
+			<td>    5532</td>
 		</tr>
 <tr>
 			<td>23</td>
 			<td class="url-cell">https://charter97.org/be/news/2020/4/29/374681/</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>UTF-8</td>
-			<td>    1727</td>
+			<td>    1703</td>
 		</tr>
 <tr>
 			<td>24</td>
 			<td class="url-cell">https://www.svaboda.org/a/31114257.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    8087</td>
+			<td>    8085</td>
 		</tr>
 <tr>
 			<td>25</td>
@@ -251,7 +251,7 @@
 			<td class="url-cell">http://svaboda.org/a/24853092.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6243</td>
+			<td>    6241</td>
 		</tr>
 <tr>
 			<td>28</td>
@@ -291,9 +291,9 @@
 <tr>
 			<td>33</td>
 			<td class="url-cell">https://xn----7sbb3acajbee5aggvnq.xn--90ais/bb_11-1</td>
-			<td><span class="tag is-danger is-light">403</span></td>
-			<td>-</td>
-			<td>      18</td>
+			<td><span class="tag is-success is-light">200</span></td>
+			<td>UTF-8</td>
+			<td>    6141</td>
 		</tr>
 <tr>
 			<td>34</td>
@@ -349,14 +349,14 @@
 			<td class="url-cell">https://www.svaboda.org/a/33096334.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6744</td>
+			<td>    6742</td>
 		</tr>
 <tr>
 			<td>42</td>
 			<td class="url-cell">https://euroradio.fm/ispaniski-urad-hocha-zabrac-autanomiyu-u-katalonii</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>UTF-8</td>
-			<td>    4466</td>
+			<td>    4429</td>
 		</tr>
 <tr>
 			<td>43</td>
@@ -370,28 +370,28 @@
 			<td class="url-cell">https://www.svaboda.org/a/30141089.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    7437</td>
+			<td>    7435</td>
 		</tr>
 <tr>
 			<td>45</td>
 			<td class="url-cell">https://www.svaboda.org/a/30167047.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    7601</td>
+			<td>    7599</td>
 		</tr>
 <tr>
 			<td>46</td>
 			<td class="url-cell">https://www.svaboda.org/a/32898555.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    4781</td>
+			<td>    4779</td>
 		</tr>
 <tr>
 			<td>47</td>
 			<td class="url-cell">https://www.svaboda.org/a/32697014.html</td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    6372</td>
+			<td>    6370</td>
 		</tr>
 <tr>
 			<td>48</td>
@@ -403,9 +403,16 @@
 <tr>
 			<td>49</td>
 			<td class="url-cell">https://reformingbelarus.vision/education</td>
-			<td><span class="tag is-danger is-light">410</span></td>
-			<td>-</td>
-			<td>      99</td>
+			<td><span class="tag is-success is-light">200</span></td>
+			<td>UTF-8</td>
+			<td>   15176</td>
+		</tr>
+<tr>
+			<td>50</td>
+			<td class="url-cell">https://verbum.by/belen/%D0%90%D0%8E%D0%A2%D0%90%D0%9D%D0%9E%D0%9C%D0%86%D0%AF</td>
+			<td><span class="tag is-success is-light">200</span></td>
+			<td>utf-8</td>
+			<td>    1941</td>
 		</tr>
 
 </tbody>
