index.html : ajout du lien vers le tableau be-2

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                                     </ul>
                                     <p>Toutes ces informations sont rassemblées dans les tableaux suivants :</p>
                                     <p class="has-text-centered mt-5"><a href="tableaux/tableau-be1.html" class="button is-primary is-medium">Bélarussien sens 1</a></p>
+                                    <p class="has-text-centered mt-5"><a href="tableaux/tableau-be2.html" class="button is-primary is-medium">Bélarussien sens 2</a></p>
                                     <p class="has-text-centered mt-5"><a href="tableaux/tableau-kr.html" class="button is-primary is-medium">Coréen</a></p>
 
                                 </div>
