ajout noms de colonne occurrences

--- a/aspirations/be/be-42.html
+++ b/aspirations/be/be-42.html
@@ -69,7 +69,7 @@
     
   </head>
 
-  <body class="page-node page-node-1093226 page-node-paragraphed_article not-front page-ispaniski-urad-hocha-zabrac-autanomiyu-u-katalonii language_be path-node page-node-type-paragraphed-article"><a href="https://euroradio.fm/cdn-cgi/content?id=_mJCtgOYr.91visPDwEqsTGKsSlRVybGa6DB_kC0jQg-1767142881.0329242-1.0.1.1-a_.VpHTKnNcE3x6gsAoGGcYl5jwoSD66LIoqZmZ8fFA" aria-hidden="true" rel="nofollow noopener" style="display: none !important; visibility: hidden !important"></a>
+  <body class="page-node page-node-1093226 page-node-paragraphed_article not-front page-ispaniski-urad-hocha-zabrac-autanomiyu-u-katalonii language_be path-node page-node-type-paragraphed-article"><a href="https://euroradio.fm/cdn-cgi/content?id=KtFJsw1jC.dSjxsjq.n0C34mEd89mdm3kwqJF91rWqI-1767144192.4849539-1.0.1.1-LwL9UEiHsMquJM6VV8mlB7Udr0BC_Khc6qCPteF40t8" aria-hidden="true" rel="nofollow noopener" style="display: none !important; visibility: hidden !important"></a>
 
       <a href="#main-content" class="visually-hidden focusable skip-link">
       Перайсці да асноўнага змесціва
@@ -1782,5 +1782,5 @@ a2a_config.num_services = 12;
 <script src="//clickiocmp.com/t/consent_226035.js" async></script>
 <script src="/sites/default/files/js/js_5rZIkDxwiHhOpeLNIQ9x797uLW_eg2-V0LOZChrKkdU.js"></script>
 
-  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b65d85e795e02e1',t:'MTc2NzE0Mjg4MQ=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b65f8630dc82c0b',t:'MTc2NzE0NDE5Mg=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
