--- a/tableaux/tableau-be.html
+++ b/tableaux/tableau-be.html
@@ -65,8 +65,8 @@
 										<th>Code HTTP</th>
 										<th>Encodage</th>
 										<th>Nb mots</th>
-										<th>Occ sens 1</th>
-										<th>Occ sens 2</th>
+										<th>Occ : oihoezhfe</th>
+										<th>Occ : bvgufie</th>
 										<th>Dump HTML</th>
 										<th>Dump Text</th>
 									</tr>
@@ -78,7 +78,7 @@
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>UTF-8</td>
 			<td>     785</td>
-			<td class="count-cell">6</td>
+			<td class="count-cell">0</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-1.html' style='color: #667eea;'>HTML</a></td>
 			<td><a href='../dumps-text/be/be-1.txt' style='color: #667eea;'>TXT</a></td>
@@ -89,7 +89,7 @@
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>UTF-8</td>
 			<td>     653</td>
-			<td class="count-cell">5</td>
+			<td class="count-cell">0</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-2.html' style='color: #667eea;'>HTML</a></td>
 			<td><a href='../dumps-text/be/be-2.txt' style='color: #667eea;'>TXT</a></td>
@@ -100,63 +100,8 @@
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>UTF-8</td>
 			<td>    3015</td>
-			<td class="count-cell">14</td>
+			<td class="count-cell">0</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-3.html' style='color: #667eea;'>HTML</a></td>
 			<td><a href='../dumps-text/be/be-3.txt' style='color: #667eea;'>TXT</a></td>
-		</tr>
-<tr>
-			<td>4</td>
-			<td class="url-cell">https://slounik.org/155312.html</td>
-			<td><span class="tag is-success is-light">200</span></td>
-			<td>UTF-8</td>
-			<td>     406</td>
-			<td class="count-cell">7</td>
-			<td class="count-cell">0</td>
-			<td><a href='../aspirations/be/be-4.html' style='color: #667eea;'>HTML</a></td>
-			<td><a href='../dumps-text/be/be-4.txt' style='color: #667eea;'>TXT</a></td>
-		</tr>
-<tr>
-			<td>5</td>
-			<td class="url-cell">https://www.svaboda.org/a/789684.html</td>
-			<td><span class="tag is-success is-light">200</span></td>
-			<td>utf-8</td>
-			<td>    1442</td>
-			<td class="count-cell">7</td>
-			<td class="count-cell">0</td>
-			<td><a href='../aspirations/be/be-5.html' style='color: #667eea;'>HTML</a></td>
-			<td><a href='../dumps-text/be/be-5.txt' style='color: #667eea;'>TXT</a></td>
-		</tr>
-<tr>
-			<td>6</td>
-			<td class="url-cell">https://be.atomiyme.com/%D0%B0%D1%9E%D1%82%D0%B0%D0%BD%D0%BE%D0%BC%D1%96%D1%8F-%D0%B3%D1%8D%D1%82%D0%B0-%D0%BF%D0%B0%D0%BB%D1%96%D1%82%D1%8B%D1%87%D0%BD%D0%B0%D0%B5-%D0%B7%D1%8F%D0%B2%D0%B0-%D1%88%D1%82%D0%BE/</td>
-			<td><span class="tag is-success is-light">200</span></td>
-			<td>UTF-8</td>
-			<td>    1052</td>
-			<td class="count-cell">23</td>
-			<td class="count-cell">0</td>
-			<td><a href='../aspirations/be/be-6.html' style='color: #667eea;'>HTML</a></td>
-			<td><a href='../dumps-text/be/be-6.txt' style='color: #667eea;'>TXT</a></td>
-		</tr>
-<tr>
-			<td>7</td>
-			<td class="url-cell">https://pawet.net/library/history/bel_history/lych/8/%D0%91%D0%B5%D0%BB%D0%B0%D1%80%D1%83%D1%81%D0%BA%D0%B0%D1%8F_%D0%BD%D0%B0%D1%86%D1%8B%D1%8F%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D1%96%D0%B4%D1%8D%D1%8F.html</td>
-			<td><span class="tag is-success is-light">200</span></td>
-			<td>UTF-8</td>
-			<td>   95969</td>
-			<td class="count-cell">52</td>
-			<td class="count-cell">0</td>
-			<td><a href='../aspirations/be/be-7.html' style='color: #667eea;'>HTML</a></td>
-			<td><a href='../dumps-text/be/be-7.txt' style='color: #667eea;'>TXT</a></td>
-		</tr>
-<tr>
-			<td>8</td>
-			<td class="url-cell">https://be.unansea.com/%D1%88%D1%82%D0%BE-%D1%82%D0%B0%D0%BA%D0%BE%D0%B5-%D0%B0%D1%9E%D1%82%D0%B0%D0%BD%D0%BE%D0%BC%D1%96%D1%8F-%D0%BF%D0%B0%D1%80%D0%B0%D0%B4%D0%B0%D0%BA-%D1%96/</td>
-			<td><span class="tag is-success is-light">200</span></td>
-			<td>UTF-8</td>
-			<td>    1137</td>
-			<td class="count-cell">20</td>
-			<td class="count-cell">1</td>
-			<td><a href='../aspirations/be/be-8.html' style='color: #667eea;'>HTML</a></td>
-			<td><a href='../dumps-text/be/be-8.txt' style='color: #667eea;'>TXT</a></td>
 		</tr>
