--- a/tableaux/tableau-be.html
+++ b/tableaux/tableau-be.html
@@ -44,6 +44,62 @@
 			.url-cell a:hover { 
 				color: #764ba2; 
 			}
+			
+			/* MODE NUIT */
+			body.dark {
+			background: #0f172a;
+			color: #e2e8f0;
+			}
+
+			/* Cartes */
+			body.dark .card {
+			background: #111827;
+			color: #e2e8f0;
+			}
+
+			/* Tableau Bulma */
+			body.dark .table {
+			background: #111827;
+			color: #e2e8f0;
+			}
+
+			body.dark .table thead th {
+			background: #0b1220;
+			color: #e2e8f0;
+			}
+
+			body.dark .table td,
+			body.dark .table th {
+			background: #111827;
+			color: #e2e8f0;
+			border-color: #334155;
+			}
+
+			body.dark .table tbody tr:hover td {
+			background: #1f2937;
+			}
+
+			/* Liens */
+			body.dark .url-cell {
+			color: #cbd5e1;
+			}
+
+			body.dark .back-link,
+			body.dark .url-cell a {
+			color: #93c5fd;
+			}
+
+			body.dark .back-link:hover,
+			body.dark .url-cell a:hover {
+			color: #c4b5fd;
+			}
+			body.dark .footer {
+			background: #0b1220 !important;
+			color: #e2e8f0;
+			}
+			body.dark .footer .has-text-grey {
+			color: #94a3b8 !important;
+			}
 		</style>	
 	</head>
 
@@ -52,6 +108,7 @@
 			<div class="hero-body">
 				<div class="container has-text-centered">
 					<h1 class="title has-text-white">Tableau des résultats</h1>
+					<button id="themeToggle" class="button is-light is-small mt-2">🌙 Mode sombre</button>
 				</div>
 			</div>
 		</section>
@@ -71,8 +128,8 @@
 										<th>Code HTTP</th>
 										<th>Encodage</th>
 										<th>Nb mots</th>
-										<th>Occ : аўтаномія</th>
-										<th>Occ : аўтаномнасьць</th>
+										<th>Occ : miaou</th>
+										<th>Occ : eofrefre</th>
 										<th>Dump HTML</th>
 										<th>Dump Text</th>
 									</tr>
@@ -237,7 +294,7 @@
 			<td class="url-cell"><a href="https://novychas.online/zamezza/polskaja-katalonija" target="_blank" rel="noopener noreferrer">https://novychas.online/zamezza/polskaja-katalonija</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    1713</td>
+			<td>    1722</td>
 			<td class="count-cell">12</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-15.html' style='color: #667eea;'>HTML</a></td>
@@ -248,7 +305,7 @@
 			<td class="url-cell"><a href="https://novychas.online/zamezza/u_marshy_autanomii_siliezii_pr" target="_blank" rel="noopener noreferrer">https://novychas.online/zamezza/u_marshy_autanomii_siliezii_pr</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    1081</td>
+			<td>    1080</td>
 			<td class="count-cell">7</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-16.html' style='color: #667eea;'>HTML</a></td>
@@ -259,7 +316,7 @@
 			<td class="url-cell"><a href="https://novychas.online/zamezza/pakazam_maskvie_sibir" target="_blank" rel="noopener noreferrer">https://novychas.online/zamezza/pakazam_maskvie_sibir</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    1596</td>
+			<td>    1594</td>
 			<td class="count-cell">6</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-17.html' style='color: #667eea;'>HTML</a></td>
@@ -270,7 +327,7 @@
 			<td class="url-cell"><a href="https://novychas.online/zamezza/vajna_za_sciah" target="_blank" rel="noopener noreferrer">https://novychas.online/zamezza/vajna_za_sciah</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    1901</td>
+			<td>    1903</td>
 			<td class="count-cell">11</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-18.html' style='color: #667eea;'>HTML</a></td>
@@ -292,7 +349,7 @@
 			<td class="url-cell"><a href="https://novychas.online/zamezza/kjurasao_a_tanom_ja_ne_pradaec" target="_blank" rel="noopener noreferrer">https://novychas.online/zamezza/kjurasao_a_tanom_ja_ne_pradaec</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    1154</td>
+			<td>    1158</td>
 			<td class="count-cell">5</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-20.html' style='color: #667eea;'>HTML</a></td>
@@ -303,7 +360,7 @@
 			<td class="url-cell"><a href="https://novychas.online/zamezza/shirokaja_a_tanom_ja_dzjakuj_n" target="_blank" rel="noopener noreferrer">https://novychas.online/zamezza/shirokaja_a_tanom_ja_dzjakuj_n</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    1631</td>
+			<td>    1624</td>
 			<td class="count-cell">7</td>
 			<td class="count-cell">0</td>
 			<td><a href='../aspirations/be/be-21.html' style='color: #667eea;'>HTML</a></td>
@@ -831,7 +888,7 @@
 			<td class="url-cell"><a href="https://nashaniva.com/93079" target="_blank" rel="noopener noreferrer">https://nashaniva.com/93079</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    4768</td>
+			<td>    4748</td>
 			<td class="count-cell">0</td>
 			<td class="count-cell">1</td>
 			<td><a href='../aspirations/be/be-69.html' style='color: #667eea;'>HTML</a></td>
@@ -886,7 +943,7 @@
 			<td class="url-cell"><a href="https://novychas.online/palityka/azbuka-palitalohii-dlja-zahavannja-nezaleznasci-i" target="_blank" rel="noopener noreferrer">https://novychas.online/palityka/azbuka-palitalohii-dlja-zahavannja-nezaleznasci-i</a></td>
 			<td><span class="tag is-success is-light">200</span></td>
 			<td>utf-8</td>
-			<td>    1839</td>
+			<td>    1837</td>
 			<td class="count-cell">0</td>
 			<td class="count-cell">1</td>
 			<td><a href='../aspirations/be/be-74.html' style='color: #667eea;'>HTML</a></td>
@@ -1357,6 +1414,23 @@
 				<p class="is-size-7 has-text-grey">Miniprojet PPE1 - M1 TAL</p>
 			</div>
 		</footer>
+		<script>
+			const btn = document.getElementById("themeToggle");
+			const saved = localStorage.getItem("theme");
+			if (saved === "dark") document.body.classList.add("dark");
+
+			function refreshLabel() {
+				const isDark = document.body.classList.contains("dark");
+				btn.textContent = isDark ? "☀️ Mode clair" : "🌙 Mode sombre";
+			}
+			refreshLabel();
+
+			btn.addEventListener("click", () => {
+				document.body.classList.toggle("dark");
+				localStorage.setItem("theme", document.body.classList.contains("dark") ? "dark" : "light");
+				refreshLabel();
+			});
+		</script>
 	</body>
 </html>
 
