suppression des lignes de debug et des fichiers test

--- a/concordances/be/be-13.html
+++ b/concordances/be/be-13.html
@@ -168,7 +168,7 @@
 					<td class="has-text-grey cat-col">аўтаномія</td>
 					<td class="kwic-left">Facebook button Падзяліцца ў Telegram button Падзяліцца ў Twitter button Падзяліцца ў VK Спасылка без VPN незалежнасць ЕС Польшча Каталонія</td>
 					<td class="kwic-kw"><mark>аўтаномія</mark></td>
-					<td class="kwic-right">Сілезія Юзаф Пілсудскі RAS Шаноўныя чытачы Новы Час адно з нешматлікіх выданняў якое выдаецца цалкам на беларускай мове На жаль</td>
+					<td class="kwic-right">Сілезія Юзаф Пілсудскі RAS Шаноўныя чытачы Сёння лёс Новага Часу у вашых руках На жаль цяпер рэдакцыя перажывае надзвычай складаны</td>
 				</tr>
 			
 
