--- a/concordances/be/be-15.html
+++ b/concordances/be/be-15.html
@@ -120,7 +120,7 @@
 					<td class="has-text-grey cat-col">аўтаномія</td>
 					<td class="kwic-left">button Падзяліцца ў Facebook button Падзяліцца ў Telegram button Падзяліцца ў Twitter button Падзяліцца ў VK Спасылка без VPN Сібір</td>
 					<td class="kwic-kw"><mark>аўтаномія</mark></td>
-					<td class="kwic-right">федэралізацыя Нафта ў абмен на нічога Хопіць карміць Маскву Шаноўныя чытачы Кожны дзень рэдакцыя Новага Часу рыхтуе для вас якасную</td>
+					<td class="kwic-right">федэралізацыя Нафта ў абмен на нічога Хопіць карміць Маскву Шаноўныя чытачы Новы Час адно з нешматлікіх выданняў якое выдаецца цалкам</td>
 				</tr>
 			
 
