--- a/concordances/be/be-16.html
+++ b/concordances/be/be-16.html
@@ -144,7 +144,7 @@
 					<td class="has-text-grey cat-col">аўтаномія</td>
 					<td class="kwic-left">меншасцяў button Падзяліцца ў Facebook button Падзяліцца ў Telegram button Падзяліцца ў Twitter button Падзяліцца ў VK Спасылка без VPN</td>
 					<td class="kwic-kw"><mark>аўтаномія</mark></td>
-					<td class="kwic-right">Венгрыя Румынія секеі сімвалы Шаноўныя чытачы Дэмакратычнае грамадства немагчыма без моцнай грамадзянскай супольнасці і незалежных медыя На жаль цяпер рэдакцыя</td>
+					<td class="kwic-right">Венгрыя Румынія секеі сімвалы Шаноўныя чытачы Шмат год мы пішам пра Беларусь для Беларусі па-беларуску На жаль цяпер рэдакцыя перажывае</td>
 				</tr>
 			
 
