--- a/concordances/be/be-17.html
+++ b/concordances/be/be-17.html
@@ -168,7 +168,7 @@
 					<td class="has-text-grey cat-col">аўтаномія</td>
 					<td class="kwic-left">Падзяліцца ў Facebook button Падзяліцца ў Telegram button Падзяліцца ў Twitter button Падзяліцца ў VK Спасылка без VPN Сталін канфлікт</td>
 					<td class="kwic-kw"><mark>аўтаномія</mark></td>
-					<td class="kwic-right">Расійская Федэрацыя межы Шаноўныя чытачы Вашыя ахвяраванні дапамогуць выратаваць незалежную беларускую журналістыку і Новы Час На жаль цяпер рэдакцыя перажывае</td>
+					<td class="kwic-right">Расійская Федэрацыя межы Шаноўныя чытачы Дэмакратычнае грамадства немагчыма без моцнай грамадзянскай супольнасці і незалежных медыя На жаль цяпер рэдакцыя перажывае</td>
 				</tr>
 			
 
