--- a/aspirations/be/be-61.html
+++ b/aspirations/be/be-61.html
@@ -110,7 +110,7 @@ try{if(window.top!==window.self&&window.self.location.hostname===window.top.loca
 <!--Analytics tag js version end-->
 <!-- Analytics tag management NoScript -->
 <noscript>
-<img style="position: absolute; border: none;" src="https://ssc.svaboda.org/b/ss/bbgprod,bbgentityrferl/1/G.4--NS/1289182199?pageName=rfe%3abel%3aw%3atranscript%3a%d0%93%d0%b0%d0%b2%d1%8d%d0%bb%3a%20%d0%a2%d0%b0%d0%bc%2c%20%d0%b4%d0%b7%d0%b5%20%d0%bd%d1%8f%d0%bc%d0%b0%20%d1%81%d0%b2%d0%b0%d0%b1%d0%be%d0%b4%d0%bd%d1%8b%d1%85%20%d0%b3%d1%80%d0%b0%d0%bc%d0%b0%d0%b4%d0%b7%d1%8f%d0%bd%d0%b0%d1%9e%2c%20%d1%82%d0%b0%d0%bc%20%d0%bf%d0%b0%d1%81%d1%82%d1%83%d0%bf%d0%be%d0%b2%d0%b0%20%d1%87%d1%8d%d0%b7%d1%8c%d0%bd%d0%b5%20%d1%9e%d1%81%d1%91&amp;c6=%d0%93%d0%b0%d0%b2%d1%8d%d0%bb%3a%20%d0%a2%d0%b0%d0%bc%2c%20%d0%b4%d0%b7%d0%b5%20%d0%bd%d1%8f%d0%bc%d0%b0%20%d1%81%d0%b2%d0%b0%d0%b1%d0%be%d0%b4%d0%bd%d1%8b%d1%85%20%d0%b3%d1%80%d0%b0%d0%bc%d0%b0%d0%b4%d0%b7%d1%8f%d0%bd%d0%b0%d1%9e%2c%20%d1%82%d0%b0%d0%bc%20%d0%bf%d0%b0%d1%81%d1%82%d1%83%d0%bf%d0%be%d0%b2%d0%b0%20%d1%87%d1%8d%d0%b7%d1%8c%d0%bd%d0%b5%20%d1%9e%d1%81%d1%91&amp;v36=8.44.0.0.370&amp;v6=D=c6&amp;g=https%3a%2f%2fwww.svaboda.org%2fa%2f1601871.html&amp;c1=D=g&amp;v1=D=g&amp;events=event1,event52&amp;c16=rferl%20belarusian&amp;v16=D=c16&amp;c5=guesteditor&amp;v5=D=c5&amp;ch=%d0%93%d1%80%d0%b0%d0%bc%d0%b0%d0%b4%d0%b7%d0%ba%d1%96%20%d1%80%d1%8d%d0%b4%d0%b0%d0%ba%d1%82%d0%b0%d1%80&amp;c15=belarusian&amp;v15=D=c15&amp;c4=article&amp;v4=D=c4&amp;c14=1601871&amp;v14=D=c14&amp;v20=no&amp;c17=web&amp;v17=D=c17&amp;mcorgid=518abc7455e462b97f000101%40adobeorg&amp;server=www.svaboda.org&amp;pageType=D=c4&amp;ns=bbg&amp;v29=D=server&amp;v25=rfe&amp;v30=423&amp;v105=D=User-Agent " alt="analytics" width="1" height="1" /></noscript>
+<img style="position: absolute; border: none;" src="https://ssc.svaboda.org/b/ss/bbgprod,bbgentityrferl/1/G.4--NS/227849947?pageName=rfe%3abel%3aw%3atranscript%3a%d0%93%d0%b0%d0%b2%d1%8d%d0%bb%3a%20%d0%a2%d0%b0%d0%bc%2c%20%d0%b4%d0%b7%d0%b5%20%d0%bd%d1%8f%d0%bc%d0%b0%20%d1%81%d0%b2%d0%b0%d0%b1%d0%be%d0%b4%d0%bd%d1%8b%d1%85%20%d0%b3%d1%80%d0%b0%d0%bc%d0%b0%d0%b4%d0%b7%d1%8f%d0%bd%d0%b0%d1%9e%2c%20%d1%82%d0%b0%d0%bc%20%d0%bf%d0%b0%d1%81%d1%82%d1%83%d0%bf%d0%be%d0%b2%d0%b0%20%d1%87%d1%8d%d0%b7%d1%8c%d0%bd%d0%b5%20%d1%9e%d1%81%d1%91&amp;c6=%d0%93%d0%b0%d0%b2%d1%8d%d0%bb%3a%20%d0%a2%d0%b0%d0%bc%2c%20%d0%b4%d0%b7%d0%b5%20%d0%bd%d1%8f%d0%bc%d0%b0%20%d1%81%d0%b2%d0%b0%d0%b1%d0%be%d0%b4%d0%bd%d1%8b%d1%85%20%d0%b3%d1%80%d0%b0%d0%bc%d0%b0%d0%b4%d0%b7%d1%8f%d0%bd%d0%b0%d1%9e%2c%20%d1%82%d0%b0%d0%bc%20%d0%bf%d0%b0%d1%81%d1%82%d1%83%d0%bf%d0%be%d0%b2%d0%b0%20%d1%87%d1%8d%d0%b7%d1%8c%d0%bd%d0%b5%20%d1%9e%d1%81%d1%91&amp;v36=8.44.0.0.370&amp;v6=D=c6&amp;g=https%3a%2f%2fwww.svaboda.org%2fa%2f1601871.html&amp;c1=D=g&amp;v1=D=g&amp;events=event1,event52&amp;c16=rferl%20belarusian&amp;v16=D=c16&amp;c5=guesteditor&amp;v5=D=c5&amp;ch=%d0%93%d1%80%d0%b0%d0%bc%d0%b0%d0%b4%d0%b7%d0%ba%d1%96%20%d1%80%d1%8d%d0%b4%d0%b0%d0%ba%d1%82%d0%b0%d1%80&amp;c15=belarusian&amp;v15=D=c15&amp;c4=article&amp;v4=D=c4&amp;c14=1601871&amp;v14=D=c14&amp;v20=no&amp;c17=web&amp;v17=D=c17&amp;mcorgid=518abc7455e462b97f000101%40adobeorg&amp;server=www.svaboda.org&amp;pageType=D=c4&amp;ns=bbg&amp;v29=D=server&amp;v25=rfe&amp;v30=423&amp;v105=D=User-Agent " alt="analytics" width="1" height="1" /></noscript>
 <!-- End of Analytics tag management NoScript -->
 <div class="google-translate-container">
 <div id="google_translate_element" data-page-language="be" data-included-languages="ru,be"></div>
@@ -698,6 +698,18 @@ class="content-sharing__link ">
 <li class="col-xs-12 col-sm-6 col-md-12 col-lg-12 mb-grid">
 <div class="media-block ">
 <div class="media-block__content">
+<span class="date date--mb date--size-4" >15:14</span>
+<a href="/a/33638510.html">
+<h4 class="media-block__title media-block__title--size-4" title="Андрэй Стрыжак зьбірае каманду і&#160;запускае новую дабрачынную ініцыятыву">
+Андрэй Стрыжак зьбірае каманду і&#160;запускае новую дабрачынную ініцыятыву
+</h4>
+</a>
+</div>
+</div>
+</li>
+<li class="col-xs-12 col-sm-6 col-md-12 col-lg-12 mb-grid">
+<div class="media-block ">
+<div class="media-block__content">
 <span class="date date--mb date--size-4" >14:43</span>
 <a href="/a/33638485.html">
 <h4 class="media-block__title media-block__title--size-4" title="27 загінулых у выніку атакі па акупаванай частцы Хэрсонскай вобласьці. Узброеныя сілы Ўкраіны адмаўляюць расейскія абвінавачаньні">
@@ -726,18 +738,6 @@ class="content-sharing__link ">
 <a href="/a/33638439.html">
 <h4 class="media-block__title media-block__title--size-4" title="Як камунальнікі змагаюцца з наступствамі сьнегападу ў Менску">
 Як камунальнікі змагаюцца з наступствамі сьнегападу ў Менску
-</h4>
-</a>
-</div>
-</div>
-</li>
-<li class="col-xs-12 col-sm-6 col-md-12 col-lg-12 mb-grid">
-<div class="media-block ">
-<div class="media-block__content">
-<span class="date date--mb date--size-4" >13:05</span>
-<a href="/a/33638423.html">
-<h4 class="media-block__title media-block__title--size-4" title="У&#160;Менску наймацнейшы сьнегапад гэтай зімы: вышыня сьнежнага покрыва дасягнула 18&#160;см">
-У&#160;Менску наймацнейшы сьнегапад гэтай зімы: вышыня сьнежнага покрыва дасягнула 18&#160;см
 </h4>
 </a>
 </div>
