--- a/concordances/be/be-14.html
+++ b/concordances/be/be-14.html
@@ -144,7 +144,7 @@
 					<td class="has-text-grey cat-col">аўтаномія</td>
 					<td class="kwic-left">button Падзяліцца ў Facebook button Падзяліцца ў Telegram button Падзяліцца ў Twitter button Падзяліцца ў VK Спасылка без VPN Польшча</td>
 					<td class="kwic-kw"><mark>аўтаномія</mark></td>
-					<td class="kwic-right">Сілезія Катавіцы Шаноўныя чытачы Дэмакратычнае грамадства немагчыма без моцнай грамадзянскай супольнасці і незалежных медыя На жаль цяпер рэдакцыя перажывае надзвычай</td>
+					<td class="kwic-right">Сілезія Катавіцы Шаноўныя чытачы Новы Час адно з нешматлікіх выданняў якое выдаецца цалкам на беларускай мове На жаль цяпер рэдакцыя</td>
 				</tr>
 			
 
