--- a/analyse-kr.html
+++ b/analyse-kr.html
@@ -419,10 +419,10 @@
 
     <!-- Header -->
     <header class="page-header">
-        <span class="lang-badge">🇧🇾 Беларуская мова</span>
-        <h1>Analyse Biélorusse</h1>
-        <p>Étude comparative des deux sens du mot « autonomie » en biélorusse : 
-           <strong>аўтаномія</strong> vs <strong>аўтаномнасьць</strong>.</p>
+        <span class="lang-badge">🇰🇷 자율</span>
+        <h1>Analyse Coréen</h1>
+        <p>Étude comparative des deux sens du mot « autonomie » en coréen : 
+           <strong>자율</strong> vs <strong>자립</strong>.</p>
     </header>
 
     <main>
@@ -430,20 +430,16 @@
         <section>
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="value">XXX</div>
+                    <div class="value">100</div>
                     <div class="label">URLs analysées</div>
                 </div>
                 <div class="stat-card">
-                    <div class="value">XXX</div>
+                    <div class="value">260</div>
                     <div class="label">Occurrences sens 1</div>
                 </div>
                 <div class="stat-card">
-                    <div class="value">XXX</div>
+                    <div class="value">393</div>
                     <div class="label">Occurrences sens 2</div>
-                </div>
-                <div class="stat-card">
-                    <div class="value">XXX</div>
-                    <div class="label">Tokens total</div>
                 </div>
             </div>
         </section>
@@ -460,15 +456,15 @@
                     <div class="cloud-card-header">
                         <span class="dot sens1"></span>
                         <h3>Sens 1</h3>
-                        <span class="word">аўтаномія</span>
+                        <span class="word">자율</span>
                     </div>
                     <div class="cloud-image">
                         <!-- Remplacer par l'image réelle -->
                         <div class="cloud-placeholder">
-                            <div class="icon">🖼️</div>
-                            <p>Remplacer par :<br><code>nuage-be-sens1.png</code></p>
+                            <img src="pals/nuage-kr-sens1.png" alt="Nuage de mots sens 1">
+                            <p>Remplacer par :<br><code>nuage-kr-sens1.png</code></p>
                         </div>
-                        <!-- <img src="../images/nuage-be-sens1.png" alt="Nuage de mots sens 1"> -->
+                        <!-- <img src="../images/nuage-kr-sens1.png" alt="Nuage de mots sens 1"> -->
                     </div>
                 </div>
 
@@ -476,15 +472,15 @@
                     <div class="cloud-card-header">
                         <span class="dot sens2"></span>
                         <h3>Sens 2</h3>
-                        <span class="word">аўтаномнасьць</span>
+                        <span class="word">자립</span>
                     </div>
                     <div class="cloud-image">
                         <!-- Remplacer par l'image réelle -->
                         <div class="cloud-placeholder">
-                            <div class="icon">🖼️</div>
-                            <p>Remplacer par :<br><code>nuage-be-sens2.png</code></p>
+                            <img src="pals/nuage-kr-sens2.png" alt="Nuage de mots sens 2">
+			<p>Remplacer par :<br><code>nuage-kr-sens2.png</code></p>
                         </div>
-                        <!-- <img src="../images/nuage-be-sens2.png" alt="Nuage de mots sens 2"> -->
+                        <!-- <img src="../images/nuage-kr-sens2.png" alt="Nuage de mots sens 2"> -->
                     </div>
                 </div>
             </div>
@@ -530,33 +526,168 @@
                     <tbody>
                         <!-- Exemple de données - à remplacer par les vraies données -->
                         <tr>
-                            <td class="word">дзяржава</td>
-                            <td>45</td>
-                            <td>38</td>
-                            <td class="positive">+4.23</td>
-                            <td>7</td>
-                            <td class="negative">-4.23</td>
+                            <td class="word">지원</td>
+                            <td>121</td>
+                            <td>17</td>
+                            <td class="negative">-9.92</td>
+                            <td>104</td>
+                            <td class="positive">+9.92</td>
                         </tr>
                         <tr>
-                            <td class="word">электрамабіль</td>
-                            <td>32</td>
-                            <td>5</td>
-                            <td class="negative">-3.87</td>
-                            <td>27</td>
-                            <td class="positive">+3.87</td>
-                        </tr>
-                        <tr>
-                            <td class="word">нацыянальны</td>
-                            <td>28</td>
-                            <td>24</td>
-                            <td class="positive">+3.54</td>
+                            <td class="word">장애인</td>
+                            <td>78</td>
                             <td>4</td>
-                            <td class="negative">-3.54</td>
+                            <td class="negative">-12.22</td>
+                            <td>74</td>
+                            <td class="positive">+12.22</td>
                         </tr>
-                        <!-- Ajouter plus de lignes -->
+                        <tr>
+                            <td class="word">보호</td>
+                            <td>71</td>
+                            <td>3</td>
+			                <td class="negative">-11.86</td>
+                            <td>68</td>
+                            <td class="positive">+11.86</td>
+                        </tr>
+                        <tr>
+                            <td class="word">자립지원</td>
+                            <td>67</td>
+                            <td>0</td>
+			                <td class="negative">-15.22</td>
+                            <td>67</td>
+                            <td class="positive">+15.22</td>
+                        </tr>
+                        <tr>
+                            <td class="word">자립준비청년</td>
+                            <td>65</td>
+                            <td>0</td>
+			                <td class="negative">-14.77</td>
+                            <td>65</td>
+                            <td class="positive">+14.77</td>
+                        </tr>
+                        <tr>
+                            <td class="word">에너지</td>
+                            <td>59</td>
+                            <td>9</td>
+			                <td class="negative">-4.76</td>
+                            <td>50</td>
+                            <td class="positive">+4.76</td>
+                        </tr>
+                        <tr>
+                            <td class="word">다양한</td>
+                            <td>48</td>
+                            <td>18</td>
+			                <td class="negative">-0.97</td>
+                            <td>30</td>
+                            <td class="positive">+0.97</td>
+                        </tr>
+                        <tr>
+                            <td class="word">보호종료</td>
+                            <td>45</td>
+                            <td>0</td>
+			                <td class="negative">-10.22</td>
+                            <td>45</td>
+                            <td class="positive">+10.22</td>
+                        </tr>
+                        <tr>
+                            <td class="word">교육</td>
+                            <td>44</td>
+                            <td>11</td>
+			                <td class="negative">-1.90</td>
+                            <td>33</td>
+                            <td class="positive">+1.90</td>
+                        </tr>
+                        <tr>
+                            <td class="word">대상</td>
+                            <td>43</td>
+                            <td>7</td>
+			                <td class="negative">-3.39</td>
+                            <td>36</td>
+                            <td class="positive">+3.39</td>
+                        </tr>
+                        <tr>
+                            <td class="word">에너지자립마을</td>
+                            <td>42</td>
+                            <td>17</td>
+			                <td class="positive">+0.90</td>
+                            <td>25</td>
+                            <td class="negative">-0.90</td>
+                        </tr>
+                        <tr>
+                            <td class="word">아동</td>
+                            <td>41/td>
+                            <td>1</td>
+			                <td class="negative">-7.86</td>
+                            <td>40</td>
+                            <td class="positive">+7.86</td>
+                        </tr>
+                        <tr>
+                            <td class="word">경제적</td>
+                            <td>40</td>
+                            <td>1</td>
+			                <td class="negative">-7.64</td>
+                            <td>39</td>
+                            <td class="positive">+7.64</td>
+                        </tr>
+                        <tr>
+                            <td class="word">운영</td>
+                            <td>39</td>
+                            <td>27</td>
+			                <td class="positive">+3.68</td>
+                            <td>12</td>
+                            <td class="negative">-3.68</td>
+                        </tr>
+                        <tr>
+                            <td class="word">종료</td>
+                            <td>37</td>
+                            <td>0</td>
+			                <td class="negative">-8.40</td>
+                            <td>37</td>
+                            <td class="positive">+8.40</td>
+                        </tr>
+                        <tr>
+                            <td class="word">기술</td>
+                            <td>36</td>
+                            <td>22</td>
+			                <td class="positive">+2.19</td>
+                            <td>14</td>
+                            <td class="negative">-2.19</td>
+                        </tr>
+                        <tr>
+                            <td class="word">직접</td>
+                            <td>35</td>
+                            <td>12</td>
+			                <td class="negative">-0.98</td>
+                            <td>24</td>
+                            <td class="positive">+0.98</td>
+                        </tr>
+                        <tr>
+                            <td class="word">사회적</td>
+                            <td>35</td>
+                            <td>6</td>
+			                <td class="negative">-2.71</td>
+                            <td>29</td>
+                            <td class="positive">+2.71</td>
+                        </tr>
+                        <tr>
+                            <td class="word">필요한</td>
+                            <td>34</td>
+                            <td>4</td>
+			                <td class="positive">-3.70</td>
+                            <td>30</td>
+                            <td class="negative">+3.70</td>
+                        </tr>
+                        <tr>
+                            <td class="word">전국</td>
+                            <td>33</td>
+                            <td>18</td>
+			                <td class="positive">+1.42</td>
+                            <td>15</td>
+                            <td class="negative">-1.42</td>
+                        </tr>
                         <tr>
                             <td colspan="6" style="text-align: center; color: var(--text-muted); font-style: italic;">
-                                Remplacer par les données de partition-be.tsv
+                                Remplacer par les données de partition-kr.tsv
                             </td>
                         </tr>
                     </tbody>
@@ -573,7 +704,7 @@
     </main>
 
     <footer>
-        <p>Projet PPE1 — M1 TAL — Université Sorbonne Nouvelle — 2024-2025</p>
+        <p>Projet PPE1 — M1 TAL — Université Sorbonne Nouvelle — 2025-2026</p>
     </footer>
 
     <script>
@@ -602,14 +733,14 @@
                 labels: ['URL 1', 'URL 2', 'URL 3', 'URL 4', 'URL 5', 'URL 6', 'URL 7', 'URL 8', 'URL 9', 'URL 10'],
                 datasets: [
                     {
-                        label: 'аўтаномія (sens 1)',
+                        label: '자율 (sens 1)',
                         data: [12, 8, 15, 5, 10, 7, 14, 3, 9, 11],
                         backgroundColor: 'rgba(102, 126, 234, 0.7)',
                         borderColor: 'rgba(102, 126, 234, 1)',
                         borderWidth: 1
                     },
                     {
-                        label: 'аўтаномнасьць (sens 2)',
+                        label: '자립 (sens 2)',
                         data: [3, 6, 2, 12, 4, 9, 1, 15, 7, 5],
                         backgroundColor: 'rgba(240, 147, 251, 0.7)',
                         borderColor: 'rgba(240, 147, 251, 1)',
