--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
             <div class="team-card">
                 <div class="team-avatar">
                     <!-- Placeholder -->
-                    🌸
+                    <img src="../Downloads/notion-avatar-yeji.png" alt="내 프로필 사진" style="width: 100px; height: 100px; border-radius: 50%;">
                 </div>
                 <h3>Yeji</h3>
                 <span class="lang-badge">🇰🇷 Coréen</span>
